--- a/.github/workflows/exp.yml
+++ b/.github/workflows/exp.yml
@@ -1,13 +1,12 @@
 name: RunHelloWorldDynamic
 
 on:
-  workflow_dispatch: # Allow manual triggering of the workflow
-
-inputs:
-  repeat:
-    description: 'Number of times to print "Hello, world!"'
-    required: true
-    default: 1
+  workflow_dispatch:
+    inputs:
+      repeat:
+        description: 'Number of times to print "Hello, world!"'
+        required: true
+        default: 1
 
 jobs:
   print_hello_world:
