--- a/.github/workflows/exp.yml
+++ b/.github/workflows/exp.yml
@@ -12,6 +12,10 @@ jobs:
   print_hello_world:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        instance: [1, 2, 3, 4, 5]
+
     steps:
     - name: Print Hello World
       run: |
