--- a/.github/workflows/exp.yml
+++ b/.github/workflows/exp.yml
@@ -18,7 +18,10 @@ jobs:
         repeat: [1, 2, 3, 4, 5]
 
     steps:
-    - name: Print Hello World
-      run:
-        echo "Hello, world!"
-      shell: bash
+    - uses: actions/checkout@v6
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Run Cypress tests
+      run: npm run cy:run 
