--- a/.github/workflows/exp.yml
+++ b/.github/workflows/exp.yml
@@ -1,6 +1,9 @@
 name: Cypress Tests
 
 on:
+  push:
+    branches:
+      - master
   workflow_dispatch:
 
 jobs:
@@ -9,10 +12,10 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v6
+        uses: actions/checkout@v2
 
       - name: Install Dependencies
         run: npm install
 
       - name: Run Cypress Tests
-        run: npm test
+        uses: cypress-io/github-action@v6
